# cub-example

./: CMakeLists.txt  main.cpp  main.cu
cmake/: FindCUDA.cmake
